fix vertical alignment in .center-vertically

--- a/stylesheets/sass/main.sass
+++ b/stylesheets/sass/main.sass
@@ -152,7 +152,7 @@ body
   @include media-mobile-sm
 
 .center-vertically
-  padding-top: 8px
+  padding-top: 6px
   padding-bottom: 0
   height: 25px
 
